--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,7 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    systemProperty 'db.user', System.getProperty('db.user', 'admin')
+    systemProperty 'db.password', System.getProperty('db.password', 'pass')
 }
