--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,22 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
-    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+
+//  Параметры для подключения к SUT
+    systemProperty 'sut.url', System.getProperty('sut.url', 'http://localhost:8080')
+
+//  Параметры для подключения к API
+    systemProperty 'api.url', System.getProperty('api.url', 'http://localhost/api/v1/')
+    systemProperty 'api.port', System.getProperty('api.port', "8080")
+
+//  Параметры для подключения к DB
     systemProperty 'db.user', System.getProperty('db.user', 'admin')
     systemProperty 'db.password', System.getProperty('db.password', 'pass')
+    systemProperty 'db.url', System.getProperty('db.url')
+//  Для запуска тестов с подключением к одной из БД по-умолчанию
+//  необходимо раскомментировать соответствующую строку ниже:
+//    1. MySQL
+//    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+//    2. PostgreSQL
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:postgresql://localhost:5432/app')
 }
