--- a/build.gradle
+++ b/build.gradle
@@ -54,5 +54,5 @@ test {
 //    1. MySQL
 //    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
 //    2. PostgreSQL
-    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:postgresql://localhost:5432/app')
+//    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:postgresql://localhost:5432/app')
 }
